# lafcbot

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LATEPASS.md  README.md  WORLD_CUP_FEATURES.md  bot.py  config.json  misc.py  mypy.ini  pyproject.toml  pytest.ini  reddit_client.py  ruff.toml  run.py  soccer.py  world_cup.py
.github/workflows/: ci.yml
fotmob/: __init__.py  client.py  constants.py  models.py  parser.py
lafcbot/: __init__.py  bot.py  db.py
lafcbot/clients/: __init__.py  browser_manager.py  espn_client.py  open_meteo_client.py  reddit_client.py  reddit_playwright.py
lafcbot/clients/fotmob/: __init__.py  client.py  constants.py  models.py  parser.py
lafcbot/cogs/: __init__.py  latepass.py  misc.py  pandaping.py  soccer.py  xcancel.py
lafcbot/formatters/: __init__.py  base.py  latepass.py  misc.py  soccer.py  sports.py  weather.py  world_cup.py
lafcbot/match_events/: __init__.py  detectors.py  formatters.py  notifiers.py
lafcbot/tasks/: __init__.py  world_cup.py
lafcbot/testing/: __init__.py  discord_mocks.py  fotmob_simulator.py  helpers.py  mock_fotmob_client.py
lafcbot/utils/: __init__.py  checks.py  config.py  countries.py  discord_helpers.py  errors.py  text_image.py  time.py
scripts/: fetch_match_data.py
test_data/: README.md  mexico_vs_south_africa_match_data.json
tests/: README.md  VISUAL_VERIFICATION.md  __init__.py  test_visual_verification.py
tests/test_event_detection/: __init__.py  test_detectors.py
tests/test_formatters/: test_world_cup_formatter.py
tests/test_integration/: __init__.py  test_fotmob_integration.py
tests/test_live_monitoring/: __init__.py  test_state_tracking.py
