[project]
name = "lafcbot"
version = "0.1.0"
description = "Minimal Discord bot managed by uv"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.13"
dependencies = [
    "py-cord>=2.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[tool.setuptools]
packages = ["fotmob"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
