[project]
name = "lafcbot"
version = "0.1.0"
description = "Minimal Discord bot managed by uv"
authors = [ { name = "Your Name" } ]
requires-python = ">=3.13"
dependencies = [
    "py-cord>=2.0",
    "aiohttp>=3.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.0",
    "pillow>=12.2.0",
]

[tool.setuptools]
packages = ["lafcbot"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
]

[tool.coverage.run]
source = ["lafcbot"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/testing/*",  # Test utilities and mocks
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"
